--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   dio: ^5.1.1
   flutter_offline: ^2.1.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
